Updated Enjo to look for the ENJOSETTINGS variable when initializing. Added new setValue and getValue methods for the input kind. Added support for disabled buttons.

--- a/examples/Enjo Demo/index.html
+++ b/examples/Enjo Demo/index.html
@@ -12,7 +12,9 @@
     <script type="text/javascript">
         //Define the location to our css file. This is done automatically if nothing is provided.
         //Because we want to pull the CSS out of the source folder, we'll define it here.
-        var cssLocation = "../../source/css/jo2.css";
+        var ENJOSETTINGS = {
+        	css: "../../source/css/jo2.css"
+        }
     </script>
 	
 	<!-- Include Jo -->
